--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
+    "postcss-nested": "^6.0.1",
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.8"
   }
