--- a/public/projects.json
+++ b/public/projects.json
@@ -9,21 +9,21 @@
       "name": "BeatBuddy",
       "live": "https://beatbuddy-7a9e4cc3fd5d.herokuapp.com/",
       "git": "https://github.com/connorgunter/music-playlist-app?tab=readme-ov-file",
-      "image":"./src/assets/BeatBuddy.png"
+      "image":"./assets/BeatBuddy.png"
     },
  
     {
       "name": "Allstar Analytics",
       "live": "https://tiny-faun-82bd85.netlify.app/",
       "git": "https://github.com/nvandy23/Allstar-analytics",
-      "image": "./src/assets/allstar_analytics.png"
+      "image": "./assets/allstar_analytics.png"
     },
 
     {
     "name": "StreamSeek",
     "live": "https://beatbuddy-7a9e4cc3fd5d.herokuapp.com/",
     "git": "https://github.com/connorgunter/music-playlist-app?tab=readme-ov-file",
-    "image": "./src/assets/Trending_movies_page.png"
+    "image": "./assets/Trending_movies_page.png"
   }
 
   ]
