fix link to stream seeek.

--- a/public/projects.json
+++ b/public/projects.json
@@ -21,8 +21,8 @@
 
     {
     "name": "StreamSeek",
-    "live": "https://beatbuddy-7a9e4cc3fd5d.herokuapp.com/",
-    "git": "https://github.com/connorgunter/music-playlist-app?tab=readme-ov-file",
+    "live": "https://stream-seek-capstone-frontend.vercel.app/",
+    "git": "https://github.com/nvandy23/StreamSeek-Capstone-Frontend",
     "image": "./assets/Trending_movies_page.png"
   }
 
